[CCAP-672] Removed ZipCode